<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GapClaim</string>
    <string name="app_title">GAP Claim</string>
    <string name="smart_claim">SMART Claim</string>
    <string name="confirm_description">we just need you to confirm the information below and well the email you with link to a web page where you can upload all the documents we need to complete your claim and achieve a settlement as quickly as possible</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact number</string>
    <string name="email">Email</string>
    <string name="mileage">Mileage</string>
    <string name="incident_date">Incident date</string>
    <string name="incident_type">Type of incident</string>
    <string name="edit_details">Edit details</string>
    <string name="insures_loss_date">Insurers total loss date</string>
    <string name="vehicle_financed">Vehicle financed?</string>
    <string name="settlement_figure_accepted">Settlement figure accepted?</string>
    <string name="vehicle_damage" >We\'re sorry that your vehicle has been damaged.</string>
    <string name="help_arrange">To help us arrange a repair we need you to provide:</string>
    <string name="incident_details">1.Details of the incident.</string>
    <string name="damage_image">2.Images of the damage.</string>
    <string name="Continue">Continue</string>
    <string name="damage_image_description">Before submitting your claim please check your terms and conditions to confirm the damage fits within the size(cms) and limits described. These were supplied when you purchased the product/s.</string>
    <string name="tap_continue">Then tap continue</string>
    <string name="tap_indicate">Please tap to indicate the location of the damage.</string>
    <string name="send_photos">Send Photos</string>
    <string name="welcome_gap_claim">Welcome to GAP Claims.</string>
    <string name="welcome_no_vehicle_confirm">we\'re sorry you are without vehicle at this time</string>
    <string name="welcome_description">To be able to process your claim quickly and easily we require some documents from you. However,for thee moments let\'s start with some basic questions.</string>
    <string name="welcome_provide_weblink">Then we\'ll provide a web link for you to upload the information we need</string>
    <string name="assistance_description">To help us to assist you can you please provide us with some information about the claim you have made with your road risk insurer.</string>
    <string name="vehicle_is_financed">Is your vehicle financed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settlement_insure">Have accepted any settlement figure offered by your insure?</string>
    <string name="mileage_info">Mileage at time of incident(if known)</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="one_week">1 week</string>
    <string name="enter_exact_date">Or Enter Exact date</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="submit">Submit</string>
    <string name="choose_incident">Choose incident</string>
    <string name="theft">Theft</string>
    <string name="fire">Fire</string>
    <string name="vandalism">Vandalism</string>
    <string name="road_accident">Road Accident</string>
    <string name="flood">Flood</string>
    <string name="confirm_and_submit">Confirm and Submit</string>
</resources>
