<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    tools:context=".view.ConfirmDetailsFragment"
    tools:ignore="RtlSymmetry">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDipTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/damage_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDiContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDipTitle"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:background="@color/colorAccent"
        android:text="@string/Continue"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDiContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
