<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.ConfirmDetailsFragment"
    tools:ignore="RtlSymmetry">
    <include layout="@layout/toolbar"
        android:id="@+id/tool_bar"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirmDis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar"
        android:textSize="14sp"
        android:layout_marginStart="@dimen/margin_xl"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmDis"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="R ashok"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlContactNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlName"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_number"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/contactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="+789798797"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlContactNumber"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ashok@gamilcom"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlMileage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlEmail"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mileage"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mileage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="4268"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlMileage"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incident_date"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/incidentdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="02 oct 2019"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlIncidentType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlDate"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incident_type"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/incidentType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="fire"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlEditDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlIncidentType"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/edit_details"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_weight="0.4"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlLossDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlEditDetails"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insures_loss_date"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/insurancedate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="02 oct 2019"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlVF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlLossDate"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_financed"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/finace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlSFA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlVF"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settlement_figure_accepted"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/settlement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/black"
            android:layout_weight="0.4"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lnlEditDetails1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnlSFA"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/margin_xl"
        android:layout_marginStart="@dimen/margin_xl">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.4"
            android:textSize="14sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/edit_details"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:layout_weight="0.4"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="14sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/confirm_and_submit"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/lnlEditDetails1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/margin_xl"
        android:layout_marginEnd="@dimen/margin_xl"
        tools:layout_editor_absoluteX="10dp"
        android:layout_marginBottom="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>